--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "gulp-ejs": "^3.1.2",
     "gulp-pug": "^4.0.1",
     "gulp-pug2": "0.0.2",
-    "gulp-util": "^3.0.8"
+    "gulp-util": "^3.0.8",
+    "npm": "^5.8.0"
   }
 }
